[gd_scene load_steps=4 format=3 uid="uid://pjw805b2oi4j"]

[ext_resource type="Script" path="res://addons/donut_collision_polygon2D/donut_collision_polygon2D.gd" id="1_gblbe"]
[ext_resource type="Script" path="res://Scenes/Projectiles/Shockwave.gd" id="1_rlkcq"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dg37w"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 45.0
emission_ring_inner_radius = 15.0
spread = 180.0
gravity = Vector3(0, 0, 0)
scale_max = 6.0
color = Color(0.850757, 0.176757, 0.21107, 1)

[node name="Shockwave" type="Area2D"]
script = ExtResource("1_rlkcq")

[node name="ShockwaveCollision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(2.75536e-15, -45, 5.64, -44.6452, 11.191, -43.5862, 16.5656, -41.8399, 21.6789, -39.4338, 26.4503, -36.4058, 30.8046, -32.8036, 34.6731, -28.6841, 37.9948, -24.1122, 40.7172, -19.1601, 42.7975, -13.9058, 44.2029, -8.43216, 44.9112, -2.82557, 44.9112, 2.82557, 44.2029, 8.43216, 42.7975, 13.9058, 40.7172, 19.1601, 37.9948, 24.1122, 34.6731, 28.6841, 30.8046, 32.8036, 26.4503, 36.4058, 21.6789, 39.4338, 16.5656, 41.8399, 11.191, 43.5862, 5.64, 44.6452, 2.75536e-15, 45, -5.64, 44.6452, -11.191, 43.5862, -16.5656, 41.8399, -21.6789, 39.4338, -26.4503, 36.4058, -30.8046, 32.8036, -34.6731, 28.6841, -37.9948, 24.1122, -40.7172, 19.1601, -42.7975, 13.9058, -44.2029, 8.43216, -44.9112, 2.82557, -44.9112, -2.82557, -44.2029, -8.43216, -42.7975, -13.9058, -40.7172, -19.1601, -37.9948, -24.1122, -34.6731, -28.6841, -30.8046, -32.8036, -26.4503, -36.4058, -21.6789, -39.4338, -16.5656, -41.8399, -11.191, -43.5862, -5.64, -44.6452, -8.26609e-15, -45, -2.75536e-15, -15, -1.88, -14.8817, -3.73035, -14.5287, -5.52187, -13.9466, -7.22631, -13.1446, -8.81678, -12.1353, -10.2682, -10.9345, -11.5577, -9.56136, -12.6649, -8.0374, -13.5724, -6.38669, -14.2658, -4.63525, -14.7343, -2.81072, -14.9704, -0.941858, -14.9704, 0.941858, -14.7343, 2.81072, -14.2658, 4.63525, -13.5724, 6.38669, -12.6649, 8.0374, -11.5577, 9.56136, -10.2682, 10.9345, -8.81678, 12.1353, -7.22631, 13.1446, -5.52187, 13.9466, -3.73035, 14.5287, -1.88, 14.8817, 9.18455e-16, 15, 1.88, 14.8817, 3.73035, 14.5287, 5.52187, 13.9466, 7.22631, 13.1446, 8.81678, 12.1353, 10.2682, 10.9345, 11.5577, 9.56136, 12.6649, 8.0374, 13.5724, 6.38669, 14.2658, 4.63525, 14.7343, 2.81072, 14.9704, 0.941858, 14.9704, -0.941858, 14.7343, -2.81072, 14.2658, -4.63525, 13.5724, -6.38669, 12.6649, -8.0374, 11.5577, -9.56136, 10.2682, -10.9345, 8.81678, -12.1353, 7.22631, -13.1446, 5.52187, -13.9466, 3.73035, -14.5287, 1.88, -14.8817, 9.18455e-16, -15, 0.0001, -44.9999)
script = ExtResource("1_gblbe")
radius = 30.0
width = 30.0
quality = 50

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = -1
amount = 15000
process_material = SubResource("ParticleProcessMaterial_dg37w")
lifetime = 0.03

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
